# Copyright 2016 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

# All LG gn-arguments

declare_args() {
  # AGL chromium%.bb recipe uses it
  is_agl = false
}

declare_args() {
  # Enable Browser Shell
  enable_browser_shell = false

  # Enable sample WEBAPI
  enable_sample_webapi = true

  # Enable Browser control WebAPI
  enable_browser_control_webapi = true

  # Enable Memory Manager WebAPI
  enable_memorymanager_webapi = true

  # Disable NEVA_DCHECK by default
  neva_dcheck_always_on = false

  # Use ozone wayland external platform
  ozone_platform_wayland_external = false

  is_webos = false
  is_webos_lite = is_agl || false

  webos_product_type = "default"

  # Use Neva app runtime
  use_neva_appruntime = true

  # Use Neva media
  use_neva_media = true

  use_neva_media_for_testing = false

  use_neva_media_player_camera = false

  enable_webm_audio_codecs = true

  enable_webm_video_codecs = true

  use_gav = false

  use_gst_media = false

  # Use neva browser
  use_neva_browser_service = true

  # Use webrisk service
  use_webrisk_service = true

  use_webrisk_database = true

  # Enable pinch-to-zoom feature for the content area
  enable_pinch_to_zoom = true

  # To be used as CBE library
  use_cbe = false

  # If CBE is used, include chrome in it
  is_chrome_cbe = false

  # If CBE is used, include app_shell in it
  is_app_shell_cbe = false

  # If CBE is used, include browser_shell there
  is_browser_shell_cbe = false

  # If CBE is use, include wam_demo in it
  is_wam_demo_cbe = false

  # Use webOS PmLog logging library
  use_pmlog = false

  # Use LTTng tracing library
  use_lttng = false

  # Use code cache for local script resource
  use_filescheme_codecache = true

  # Use Neva WebRTC
  use_neva_webrtc = false

  # Use Neva chrome extensions support
  use_neva_chrome_extensions = false

  # Disable Advanced Encryption Standard (AES) features set for ARM in
  # zlib component
  disable_zlib_arm_aes_cflag = false

  # For updating v8 version number with webos submission number
  webos_submission_number = 0

  # Enable using local storage tracker
  use_local_storage_tracker = false

  # Use webOS Video Codec
  use_webos_codec = false

  # Use webOS AudioD service for audio input/output
  use_webos_audio = false

  # Use webOS camera service for capture
  use_webos_camera = false

  # host prefix for webos toolchains
  webos_toolprefix = ""

  # rpath for linking with non-system libraries
  webos_rpath = ""

  # extra cxx flags for clang build
  clang_extra_cxxflags = ""

  # flag for using libstdc++ instead of libc++ for clang
  clang_use_stdlib = false

  # Use geoplugin service to get geolocation
  use_geoplugin = true
}

declare_args() {
  # neva_media also needs a part of punch-hole implementation
  use_neva_punch_hole = use_neva_media

  # Suspend capturing audio/video when tab or app is suspended
  use_neva_suspend_media_capture = is_webos

  # Enable WebOSServiceBridge WebAPI
  enable_webos_service_bridge_webapi = is_webos || is_agl

  # Enable WebOSSystem WebAPI
  enable_webos_system_webapi = is_webos

  # Support single window mode
  use_single_window_mode = is_webos || is_webos_lite

  # Use Neva V4L2 codec
  use_neva_v4l2_codec = false || use_webos_codec
}
