# Copyright 2016 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chromeos/ui_mode.gni")
import("//build/config/ui.gni")

declare_args() {
  # Whether to use libgnome-keyring (deprecated by libsecret).
  # See http://crbug.com/466975 and http://crbug.com/355223.
  # TODO(neva): Not all platforms have the gnome-keyring library, because of
  # that we disable the using of gnome-keyring for webOS.
  use_gnome_keyring = is_linux && use_glib && !is_webos

  # Whether to make account and service names for the crypto key storage
  # configurable at runtime for embedders.
  #
  # Currently only has an effect on macOS via KeychainPassword
  allow_runtime_configurable_key_storage = false
}
