# Copyright 2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

if (is_webos) {
  import("//media/neva/webos/build.gni")
}

component("media_player_neva") {
  public_configs = []
  public_deps = [
    "//base",
    "//third_party/jsoncpp",
  ]
  deps = [ "//media/base" ]
  sources = [
    "media_player_neva_factory.h",
    "media_player_neva_interface.cc",
    "media_player_neva_interface.h",
    "media_player_neva_types.h",
    "media_track_info.h",
    "media_util.cc",
    "media_util.h",
  ]
  defines = []
  if (is_webos) {
    configs += media_player_neva_webos.configs
    public_configs += media_player_neva_webos.public_configs
    deps += media_player_neva_webos.deps
    public_deps += media_player_neva_webos.public_deps
    sources += media_player_neva_webos.sources
    defines += media_player_neva_webos.defines
  } else if (use_neva_media_for_testing) {
    sources += [
      "fake_media_player_neva_factory.cc",
      "fake_url_media_player.cc",
      "fake_url_media_player.h",
    ]
  } else {
    sources += [ "media_player_neva_factory_stub.cc" ]
  }
}
