# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//net/features.gni")
import("//neva/neva.gni")

source_set("app_drm") {
  assert(!disable_file_support,
         "disable_file_support should be false for app drm")

  deps = [ "//third_party/boringssl" ]

  sources = [ "appdrm_common.h" ]
  sources += [ "appdrm_file_manager_stub.cc" ]

  deps += [ "//mojo/public/cpp/system" ]
}
