# Copyright 2016 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/ui.gni")
import("//neva/app_runtime/app_runtime_locales.gni")
import("//neva/neva.gni")
import("//tools/grit/repack.gni")

config("app_runtime_cfg") {
  defines = [ "APP_RUNTIME_IMPLEMENTATION" ]
}

source_set("app_runtime_webview_controller") {
  sources = [
    "browser/app_runtime_webview_controller_impl.cc",
    "browser/app_runtime_webview_controller_impl.h",
    "public/webview_controller_delegate.h",
  ]

  public_deps = [
    "//content/public/common",
    "//neva/app_runtime/public/mojom",
    "//skia:skia",
    "//third_party/boringssl:boringssl",
  ]
}

static_library("app_runtime") {
  configs += [ ":app_runtime_cfg" ]

  sources = [
    "app/app_runtime_js_dialog_manager.cc",
    "app/app_runtime_js_dialog_manager.h",
    "app/app_runtime_js_dialog_manager_delegate.h",
    "app/app_runtime_main.cc",
    "app/app_runtime_main.h",
    "app/app_runtime_main_delegate.cc",
    "app/app_runtime_main_delegate.h",
    "app/app_runtime_page_contents.cc",
    "app/app_runtime_page_contents.h",
    "app/app_runtime_page_contents_delegate.cc",
    "app/app_runtime_page_contents_delegate.h",
    "app/app_runtime_page_view.cc",
    "app/app_runtime_page_view.h",
    "app/app_runtime_page_view_delegate.cc",
    "app/app_runtime_page_view_delegate.h",
    "app/app_runtime_shell.cc",
    "app/app_runtime_shell.h",
    "app/app_runtime_shell_environment.cc",
    "app/app_runtime_shell_environment.h",
    "app/app_runtime_shell_observer.cc",
    "app/app_runtime_shell_observer.h",
    "app/app_runtime_shell_window.cc",
    "app/app_runtime_shell_window.h",
    "app/app_runtime_shell_window_delegate.cc",
    "app/app_runtime_shell_window_delegate.h",
    "app/app_runtime_visible_region_capture.cc",
    "app/app_runtime_visible_region_capture.h",
    "browser/app_runtime_browser_context.cc",
    "browser/app_runtime_browser_context.h",
    "browser/app_runtime_browser_main_extra_parts.h",
    "browser/app_runtime_browser_main_parts.cc",
    "browser/app_runtime_browser_main_parts.h",
    "browser/app_runtime_browser_switches.cc",
    "browser/app_runtime_browser_switches.h",
    "browser/app_runtime_content_browser_client.cc",
    "browser/app_runtime_content_browser_client.h",
    "browser/app_runtime_devtools_manager_delegate.cc",
    "browser/app_runtime_devtools_manager_delegate.h",
    "browser/app_runtime_download_manager_delegate.cc",
    "browser/app_runtime_download_manager_delegate.h",
    "browser/app_runtime_plugin_service_filter.cc",
    "browser/app_runtime_plugin_service_filter.h",
    "browser/app_runtime_quota_permission_context.cc",
    "browser/app_runtime_quota_permission_context.h",
    "browser/app_runtime_quota_permission_delegate.h",
    "browser/app_runtime_shared_memory_manager.cc",
    "browser/app_runtime_shared_memory_manager.h",
    "browser/app_runtime_web_contents_delegate.cc",
    "browser/app_runtime_web_contents_delegate.h",
    "browser/app_runtime_web_contents_view_delegate_aura.cc",
    "browser/app_runtime_web_contents_view_delegate_creator.h",
    "browser/app_runtime_webview_host_impl.cc",
    "browser/app_runtime_webview_host_impl.h",
    "browser/browsing_data/browsing_data_remover.cc",
    "browser/browsing_data/browsing_data_remover.h",
    "browser/gcm/gcm_profile_service_factory.cc",
    "browser/gcm/gcm_profile_service_factory.h",
    "browser/gcm/instance_id/instance_id_profile_service_factory.cc",
    "browser/gcm/instance_id/instance_id_profile_service_factory.h",
    "browser/geolocation/geolocation_permission_context.cc",
    "browser/geolocation/geolocation_permission_context.h",
    "browser/host_content_settings_map_factory.cc",
    "browser/host_content_settings_map_factory.h",
    "browser/media/media_access_handler.cc",
    "browser/media/media_access_handler.h",
    "browser/media/webrtc/device_media_stream_access_handler.cc",
    "browser/media/webrtc/device_media_stream_access_handler.h",
    "browser/media/webrtc/media_capture_devices_dispatcher.cc",
    "browser/media/webrtc/media_capture_devices_dispatcher.h",
    "browser/media/webrtc/media_stream_capture_indicator.cc",
    "browser/media/webrtc/media_stream_capture_indicator.h",
    "browser/media/webrtc/media_stream_device_permission_context.cc",
    "browser/media/webrtc/media_stream_device_permission_context.h",
    "browser/net/app_runtime_network_change_notifier.cc",
    "browser/net/app_runtime_network_change_notifier.h",
    "browser/net/app_runtime_proxying_url_loader_factory.cc",
    "browser/net/app_runtime_proxying_url_loader_factory.h",
    "browser/net/app_runtime_web_request_handler.cc",
    "browser/net/app_runtime_web_request_handler.h",
    "browser/net/app_runtime_web_request_listener.h",
    "browser/notifications/displayed_notifications_dispatch_callback.h",
    "browser/notifications/notification_common.cc",
    "browser/notifications/notification_common.h",
    "browser/notifications/notification_display_service.cc",
    "browser/notifications/notification_display_service.h",
    "browser/notifications/notification_display_service_factory.cc",
    "browser/notifications/notification_display_service_factory.h",
    "browser/notifications/notification_display_service_impl.cc",
    "browser/notifications/notification_display_service_impl.h",
    "browser/notifications/notification_event_dispatcher.cc",
    "browser/notifications/notification_event_dispatcher.h",
    "browser/notifications/notification_handler.cc",
    "browser/notifications/notification_handler.h",
    "browser/notifications/notification_permission_context.cc",
    "browser/notifications/notification_permission_context.h",
    "browser/notifications/notification_platform_bridge_delegator.cc",
    "browser/notifications/notification_platform_bridge_delegator.h",
    "browser/notifications/notification_platform_bridge_webos.cc",
    "browser/notifications/notification_platform_bridge_webos.h",
    "browser/notifications/notification_wrapper.cc",
    "browser/notifications/notification_wrapper.h",
    "browser/notifications/notifier_client.cc",
    "browser/notifications/notifier_client.h",
    "browser/notifications/notifier_controller.h",
    "browser/notifications/platform_notification_service_factory.cc",
    "browser/notifications/platform_notification_service_factory.h",
    "browser/notifications/platform_notification_service_impl.cc",
    "browser/notifications/platform_notification_service_impl.h",
    "browser/notifications/web_page_notifier_controller.cc",
    "browser/notifications/web_page_notifier_controller.h",
    "browser/permissions/neva_permissions_client.cc",
    "browser/permissions/neva_permissions_client.h",
    "browser/permissions/origin_keyed_permission_action_service_factory.cc",
    "browser/permissions/origin_keyed_permission_action_service_factory.h",
    "browser/permissions/permission_decision_auto_blocker_factory.cc",
    "browser/permissions/permission_decision_auto_blocker_factory.h",
    "browser/permissions/permission_manager_factory.cc",
    "browser/permissions/permission_manager_factory.h",
    "browser/permissions/permission_prompt.h",
    "browser/permissions/permission_prompt_webos.cc",
    "browser/permissions/permission_prompt_webos.h",
    "browser/permissions/permission_prompt_wrapper.cc",
    "browser/permissions/permission_prompt_wrapper.h",
    "browser/permissions/permission_request_impl.cc",
    "browser/permissions/permission_request_impl.h",
    "browser/push_messaging/push_messaging_app_identifier.cc",
    "browser/push_messaging/push_messaging_app_identifier.h",
    "browser/push_messaging/push_messaging_constants.cc",
    "browser/push_messaging/push_messaging_constants.h",
    "browser/push_messaging/push_messaging_features.cc",
    "browser/push_messaging/push_messaging_features.h",
    "browser/push_messaging/push_messaging_service_factory.cc",
    "browser/push_messaging/push_messaging_service_factory.h",
    "browser/push_messaging/push_messaging_service_impl.cc",
    "browser/push_messaging/push_messaging_service_impl.h",
    "browser/push_messaging/push_messaging_utils.cc",
    "browser/push_messaging/push_messaging_utils.h",
    "browser/ui/app_runtime_views_delegate.cc",
    "browser/ui/app_runtime_views_delegate.h",
    "browser/web_contents_collection.cc",
    "browser/web_contents_collection.h",
    "common/app_runtime_content_client.cc",
    "common/app_runtime_content_client.h",
    "common/app_runtime_file_access_controller.h",
    "common/app_runtime_view_messages.h",
    "public/app_runtime_constants.h",
    "public/app_runtime_event.h",
    "public/app_runtime_export.h",
    "public/app_runtime_switches.cc",
    "public/app_runtime_switches.h",
    "public/file_security_origin.h",
    "public/notifier_settings_controller.cc",
    "public/notifier_settings_controller.h",
    "public/platform_factory.cc",
    "public/platform_factory.h",
    "public/proxy_settings.cc",
    "public/proxy_settings.h",
    "public/webapp_window_base.h",
    "public/webapp_window_delegate.cc",
    "public/webapp_window_delegate.h",
    "public/webview_base.h",
    "public/webview_delegate.h",
    "public/window_group_configuration.h",
    "renderer/app_runtime_content_renderer_client.cc",
    "renderer/app_runtime_content_renderer_client.h",
    "renderer/app_runtime_injection_loader.cc",
    "renderer/app_runtime_injection_loader.h",
    "renderer/app_runtime_page_load_timing_render_frame_observer.cc",
    "renderer/app_runtime_page_load_timing_render_frame_observer.h",
    "renderer/app_runtime_render_frame_observer.cc",
    "renderer/app_runtime_render_frame_observer.h",
    "ui/desktop_aura/app_runtime_desktop_native_widget_aura.cc",
    "ui/desktop_aura/app_runtime_desktop_native_widget_aura.h",
    "app_runtime_event.cc",
    "file_security_origin.cc",
    "webapp_injection_manager.cc",
    "webapp_injection_manager.h",
    "webapp_window.cc",
    "webapp_window.h",
    "webapp_window_base.cc",
    "webview.cc",
    "webview.h",
    "webview_export.h",
    "webview_base.cc",
    "webview_profile.cc",
    "webview_profile.h",
    "window_group_configuration.cc",
  ]

  if (is_agl) {
    sources += [
      "agl/webapp_window_agl.cc",
      "agl/webapp_window_agl.h",
    ]
  }

  public_deps = [
    ":app_runtime_webview_controller",
    "//neva/app_runtime/public/mojom:mojom_app_runtime_blink",
  ]

  deps = [
    "//base",
    "//base/third_party/dynamic_annotations",
    "//build/util:chromium_git_revision",
    "//components/certificate_transparency",
    "//components/content_settings/core/browser",
    "//components/cookie_config",
    "//components/discardable_memory/service",
    "//components/gcm_driver",
    "//components/heap_profiling/multi_process",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/media_capture_util:devices_dispatcher",
    "//components/media_control/browser",
    "//components/media_control/renderer",
    "//components/network_session_configurator/common",
    "//components/os_crypt",
    "//components/permissions",
    "//components/pref_registry",
    "//components/prefs",
    "//components/services/heap_profiling/public/cpp",
    "//components/user_prefs",
    "//components/watchdog:watchdog",
    "//components/web_cache/browser",
    "//components/web_cache/public/mojom",
    "//components/webrtc",
    "//content",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/common",
    "//crypto",
    "//device/bluetooth",
    "//extensions/browser",
    "//extensions/common/api",
    "//neva/app_drm",
    "//neva/app_runtime/public/mojom",
    "//neva/injection/public/common:common_sources",
    "//neva/injection/public/renderer",
    "//neva/pal_service",
    "//neva/user_agent/browser",
    "//neva/user_agent/common",
    "//net",
    "//services/network/public/mojom",
    "//services/network/public/mojom:cookies_mojom",
    "//third_party/blink/public/common",
    "//third_party/blink/public/mojom:mojom_platform",
    "//third_party/blink/public:blink",
    "//ui/aura",
    "//ui/base",
    "//ui/events",
    "//ui/events/blink",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/message_center",
    "//ui/views",
    "//ui/views/controls/webview",
    "//ui/wm",
    "//ui/wm/public",
    "//url",
  ]

  if (use_ozone && ozone_platform_wayland_external) {
    deps += [
      "//ozone/ui/webui",
    ]
  }

  if (use_neva_media) {
    deps += [
      "//components/cdm/common",
      "//components/cdm/renderer",
      "//media/neva:media_platform_api",
      "//neva/neva_media_service",
      "//neva/neva_media_service/public/mojom",
    ]
  }

  if (use_neva_chrome_extensions) {
    sources += [
      "browser/extensions/tab_helper_impl.cc",
      "browser/extensions/tab_helper_impl.h",
    ]

    deps += [
      "//components/sessions",
      "//components/user_prefs",
      "//neva/extensions",
    ]
  }

  data_deps = [
    ":app_runtime_resources",
  ]

  include_dirs = [ "." ]
  defines = [
    "WEBVIEW_IMPLEMENTATION",
  ]
}

grit("app_runtime_inspector_resources_grit") {
  visibility = [
    ":*",
    "//content/shell/*"
  ]
  source = "//neva/app_runtime/browser/resources/app_runtime_inspector_resources.grd"
  output_dir = "$root_gen_dir/neva/app_runtime/"
  outputs = [
    "grit/app_runtime_inspector_resources.h",
    "app_runtime_inspector_resources.pak",
  ]
}

group("resources") {
  public_deps = [
    ":app_runtime_inspector_resources_grit",
  ]
}

repack("app_runtime_resources") {
  sources = [
    "$root_gen_dir/components/strings/components_strings_en-US.pak",
    "$root_gen_dir/content/browser/tracing/tracing_resources.pak",
    "$root_gen_dir/content/content_resources.pak",
    "$root_gen_dir/extensions/extensions_browser_resources_100_percent.pak",
    "$root_gen_dir/extensions/extensions_renderer_resources.pak",
    "$root_gen_dir/extensions/extensions_resources.pak",
    "$root_gen_dir/extensions/shell/app_shell_resources.pak",
    "$root_gen_dir/extensions/strings/extensions_strings_en-US.pak",
    "$root_gen_dir/injection/renderer/resources/injection_resources.pak",
    "$root_gen_dir/mojo/public/js/mojo_bindings_resources.pak",
    "$root_gen_dir/net/net_resources.pak",
    "$root_gen_dir/neva/app_runtime/app_runtime_inspector_resources.pak",
    "$root_gen_dir/third_party/blink/public/resources/blink_resources.pak",
    "$root_gen_dir/third_party/blink/public/resources/blink_scaled_resources_100_percent.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_en-US.pak",
    "$root_gen_dir/ui/resources/ui_resources_100_percent.pak",
    "$root_gen_dir/ui/strings/app_locale_settings_en-US.pak",
    "$root_gen_dir/ui/strings/ui_strings_en-US.pak",
  ]

  deps = [
    ":resources",
    "//components/strings",
    "//content:content_resources",
    "//content/browser/tracing:resources",
    "//extensions:extensions_resources",
    "//extensions/shell:resources",
    "//extensions/strings",
    "//mojo/public/js:resources",
    "//net:net_resources",
    "//neva/injection/renderer:resources",
    "//third_party/blink/public:resources",
    "//third_party/blink/public:scaled_resources_100_percent",
    "//third_party/blink/public/strings",
    "//ui/resources",
    "//ui/strings",
  ]

  if (toolkit_views) {
    deps += [ "//ui/views/resources" ]
    sources +=
        [ "$root_gen_dir/ui/views/resources/views_resources_100_percent.pak" ]
  }

  public_deps = [
    "//tools/v8_context_snapshot:v8_context_snapshot",
  ]

  sources += [ "$root_gen_dir/content/browser/devtools/devtools_resources.pak" ]
  deps += [ "//content/browser/devtools:devtools_resources" ]
  output = "$root_out_dir/app_runtime_content.pak"
}
