# Copyright 2022 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//mojo/public/tools/bindings/mojom.gni")

source_set("extensions") {
  sources = [
    "browser/api/extension_action/extension_action_api.cc",
    "browser/api/extension_action/extension_action_api.h",
    "browser/api/scripting/scripting_api.cc",
    "browser/api/scripting/scripting_api.h",
    "browser/api/tabs/tabs_api.cc",
    "browser/api/tabs/tabs_api.h",
    "browser/browser_context_keyed_service_factories.cc",
    "browser/browser_context_keyed_service_factories.h",
    "browser/neva_extension_api_client.cc",
    "browser/neva_extension_api_client.h",
    "browser/neva_extension_host_delegate.cc",
    "browser/neva_extension_host_delegate.h",
    "browser/neva_extension_loader.cc",
    "browser/neva_extension_loader.h",
    "browser/neva_extension_system.cc",
    "browser/neva_extension_system.h",
    "browser/neva_extension_system_factory.cc",
    "browser/neva_extension_system_factory.h",
    "browser/neva_extensions_browser_api_provider.cc",
    "browser/neva_extensions_browser_api_provider.h",
    "browser/neva_extensions_browser_client.cc",
    "browser/neva_extensions_browser_client.h",
    "browser/neva_extensions_service_factory.cc",
    "browser/neva_extensions_service_factory.h",
    "browser/neva_extensions_service_impl.cc",
    "browser/neva_extensions_service_impl.h",
    "browser/neva_extensions_util.cc",
    "browser/neva_extensions_util.h",
    "browser/neva_prefs.cc",
    "browser/neva_prefs.h",
    "browser/tab_helper.h",
    "browser/web_contents_map.cc",
    "browser/web_contents_map.h",
    "common/neva_extensions_api_provider.cc",
    "common/neva_extensions_api_provider.h",
    "common/neva_extensions_client.cc",
    "common/neva_extensions_client.h",
    "common/permissions/neva_api_permissions.cc",
    "common/permissions/neva_api_permissions.h",
    "renderer/neva_extensions_renderer_client.cc",
    "renderer/neva_extensions_renderer_client.h",
  ]

  public_deps = [
    ":mojom",
    "//extensions/browser",
    "//extensions/browser:core_api_provider",
    "//extensions/common",
    "//extensions/common:core_api_provider",
    "//extensions/common:mojom",
    "//extensions/renderer",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
  ]

  deps = [
    "//base",
    "//neva/extensions/common/api",
    "//neva/extensions/common/api:api_registration",
    "//neva/extensions/common/api:extensions_features",
    "//ui/views",
    "//ui/views/controls/webview",
  ]
}

mojom("mojom") {
  sources = [ "common/mojom/neva_extensions_service.mojom" ]

  public_deps = [ "//mojo/public/mojom/base" ]
}
