# Copyright 2022 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
import("//neva/neva.gni")


if (use_webrisk_service) {
  import("//neva/browser_service/browser/webrisk/core/webrisk.gni")
  proto_library("webrisk_proto") {
    sources = [ "//neva/browser_service/browser/webrisk/core/webrisk.proto" ]
  }
}

source_set("browser_service_browser") {
  public_deps = []
  sources = [
    "cookiemanager_service_impl.cc",
    "cookiemanager_service_impl.h",
    "customuseragent_service_impl.h",
    "customuseragent_service_impl.cc",
    "mediacapture_service_impl.cc",
    "mediacapture_service_impl.h",
    "popupblocker_service_impl.cc",
    "popupblocker_service_impl.h",
    "sitefilter_service_impl.cc",
    "sitefilter_service_impl.h",
    "url_database.cc",
    "url_database.h",
    "userpermission_service_impl.cc",
    "userpermission_service_impl.h",
  ]

  deps = [
    "//base",
    "//neva/browser_service/public/mojom",
    "//services/network/public/mojom",
  ]

  if (use_neva_browser_service) {
    sources += [
      "//neva/browser_service/browser/malware_detection_service.h",
      "//neva/browser_service/browser/malware_url_loader_throttle.cc",
      "//neva/browser_service/browser/malware_url_loader_throttle.h",
    ]

    if (use_webrisk_service) {
      sources += webrisk_sources
      public_deps += [ ":webrisk_proto" ]
    } else {
      sources += [
        "//neva/browser_service/browser/malware_detection_service_proxy.cc",
        "//neva/browser_service/browser/malware_detection_service_proxy.h",
      ]
    }
  }
}
