# Copyright 2021 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/browser_shell/service/browser_shell_service.gni")
import("//services/service_manager/public/cpp/service_executable.gni")

component("shell_service") {
  sources = [
    "browser_shell_ipc.cc",
    "browser_shell_ipc.h",
    "browser_shell_ipc_endpoint_impl.cc",
    "browser_shell_ipc_endpoint_impl.h",
    "browser_shell_page_contents_impl.cc",
    "browser_shell_page_contents_impl.h",
    "browser_shell_page_view_impl.cc",
    "browser_shell_page_view_impl.h",
    "browser_shell_service_impl.cc",
    "browser_shell_service_impl.h",
    "browser_shell_storage_partition_name.cc",
    "browser_shell_storage_partition_name.h",
    "browser_shell_webrequest_impl.cc",
    "browser_shell_webrequest_impl.h",
    "browser_shell_window_impl.cc",
    "browser_shell_window_impl.h",
  ]

  deps = [
    "//base",
    "//neva/app_runtime",
  ]

  public_deps = [
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//neva/browser_shell/service/public/mojom",
  ]

  defines = browser_shell_service_defines
}
